# project-ext-dbx

./: .gitignore  Cargo.toml  PUBLISHING.md  README.md  ROADMAP.md  TESTING_WORKFLOW.md  env.example
bindings/dbx_ts/: Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json
bindings/dbx_ts/src/: lib.rs
bindings/dbx_ts/src/__tests__/redis/: set.test.ts  string.test.ts
bindings/dbx_ts/src/__tests__/redis_ws/: set.test.ts  string.test.ts
bindings/redis_ts/: Cargo.toml
coverage-report/: tarpaulin-report.html
coverage_report/: tarpaulin-report.html
crates/adapter/: Cargo.toml  README.md
crates/adapter/src/: mod.rs
crates/adapter/src/redis/: backend.rs  factory.rs  mod.rs  universal.rs
crates/adapter/src/redis/primitives/: admin.rs  bitmap.rs  set.rs  sorted_set.rs  string.rs
crates/dbx-api/: API_KEY_AUTHENTICATION.md  AUTHENTICATION.md  Cargo.toml
crates/dbx-api/src/: config.rs  lib.rs  main.rs  middleware.rs  models.rs  server.rs
crates/dbx-api/src/auth/: api_keys.rs  mod.rs  permissions.rs  rbac.rs
crates/dbx-api/src/constants/: defaults.rs
crates/dbx-api/src/middleware/: auth.rs  mod.rs  rate_limit.rs
crates/dbx-api/src/routes/: api_keys.rs  auth.rs  data.rs  health.rs  mod.rs  query.rs  rate_limit.rs  roles.rs  stream.rs
crates/dbx-api/src/routes/common/: admin.rs  hash.rs
crates/dbx-api/src/routes/redis/: admin.rs
crates/dbx-api/src/routes/universal/: data.rs  health.rs
crates/dbx-api/tests/: integration_tests.rs
crates/dbx-api/tests/test_utils/: mod.rs
crates/dbx-config/: Cargo.toml
crates/dbx-config/src/: config.rs  error.rs  lib.rs  loader.rs  validation.rs
crates/dbx-core/: Cargo.toml
crates/dbx-core/src/: backends.rs  error.rs  lib.rs  operations.rs  types.rs
crates/dbx-router/: Cargo.toml
crates/dbx-router/src/: error.rs  lib.rs  load_balancer.rs  matcher.rs  registry.rs  router.rs
crates/redis_api/: AUTHENTICATION.md  Cargo.toml
crates/redis_api/src/: config.rs  main.rs  middleware.rs  models.rs  server.rs
crates/redis_api/src/constants/: defaults.rs
crates/redis_api/src/routes/: auth.rs  mod.rs
crates/redis_api/src/routes/common/: admin.rs  set.rs
crates/redis_api/src/routes/redis/: admin.rs  hash.rs  set.rs  string.rs
crates/redis_api/src/routes/redis_ws/: admin.rs
crates/redis_api/src/routes/universal/: mod.rs  query.rs  stream.rs
crates/redis_api/tests/: integration_tests.rs  mod.rs
crates/redis_api/tests/common/: mod.rs
crates/redis_api/tests/redis/: admin.rs  hash.rs  set.rs  string.rs
crates/redis_api/tests/redis_ws/: admin.rs  hash.rs  set.rs  string.rs
crates/redis_api/tests/test_utils/: mod.rs
crates/redis_client/: Cargo.toml
crates/redis_client/tests/: mod.rs
crates/redis_client/tests/redis/: string.rs
docs/pages/: index.mdx
docs/pages/docs/: configuration.mdx
docs/pages/docs/api/websocket/: connection.mdx
docs/pages/docs/deployment/: docker.mdx
docs/pages/docs/development/: index.mdx
scripts/: README.md
src/: main.rs  server.rs
