[workspace]
members = [
    "crates/adapter",
    "crates/dbx-api",
    "crates/dbx-core",
    "crates/dbx-config",
    "crates/dbx-router",
    "bindings/dbx_ts",
]
resolver = "2"

[workspace.package]
version = "0.1.6"
edition = "2021"
authors = ["Effortless Labs"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/effortlesslabs/dbx"

[workspace.dependencies]
anyhow = "1.0.95"
async-trait = "0.1.86"
axum = "0.7.9"
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.23", features = ["derive"] }
env_logger = "0.11.6"
futures = "0.3.31"
mockall = "0.11.4"
redis = "0.23.3"
reqwest = { version = "0.12.10", features = ["json"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.7"
tokio = { version = "1.45.1", features = ["full"] }
tower = "0.5.1"
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.11.0", features = ["v4"] }

# Test coverage and development tools
[workspace.dev-dependencies]
tarpaulin = "0.31"
criterion = "0.5"
proptest = "1.0"
serial_test = "3.0"

# Coverage configuration
[workspace.metadata.tarpaulin]
# Include all workspace members in coverage
include-tests = true
# Skip external dependencies
skip-clean = false
# Output formats
out = ["Xml", "Html", "Lcov"]
# Coverage threshold (90%)
fail-under = 90
# Exclude certain files from coverage
exclude = [
    "tests/*",
    "*/tests/*",
    "benches/*",
    "examples/*",
]
