[package]
name = "dbx-bindings"
version = "0.1.6"
edition = "2021"
authors = ["Effortless Labs"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/effortlesslabs/dbx"
description = "NAPI bindings for DBX Universal Database SDK"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.16.0", default-features = false, features = ["napi8", "tokio_rt"] }
napi-derive = "2.16.0"
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json"] }

# DBX dependencies
dbx-core = { path = "../../crates/dbx-core" }
dbx-adapter = { path = "../../crates/adapter" }

[build-dependencies]
napi-build = "2.2"

[features]
default = ["napi4"]
napi4 = ["napi/napi4"]
napi5 = ["napi/napi5"]
napi6 = ["napi/napi6"]
napi7 = ["napi/napi7"]
napi8 = ["napi/napi8"] 