[package]
name = "dbx-redis-bindings"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "NAPI bindings for DBX Redis SDK"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.14.1", default-features = false, features = ["napi8"] }
napi-derive = "2.14.0"
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

[build-dependencies]
napi-build = "2.2"

[features]
default = ["napi4"]
napi4 = ["napi/napi4"]
napi5 = ["napi/napi5"]
napi6 = ["napi/napi6"]
napi7 = ["napi/napi7"]
napi8 = ["napi/napi8"] 