[package]
name = "dbx-adapter"
version = "0.1.6"
edition = "2021"
description = "Database adapters for DBX"
license = "MIT"
repository = "https://github.com/effortlesslabs/dbx"

[lib]
name = "dbx_adapter"
path = "src/lib.rs"

[dependencies]
dbx-core = { path = "../dbx-core" }
dbx-config = { path = "../dbx-config" }
dbx-router = { path = "../dbx-router" }
redis = { version = "0.23", features = ["tokio-comp", "aio"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = "0.4"
dotenv = "0.15"
ctor = "0.2"

[features]
default = []
connection-pool = []
async = ["redis/aio"]
