[package]
name = "dbx-config"
version = "0.1.6"
edition = "2021"
description = "Configuration management and validation for DBX"
license = "MIT"
repository = "https://github.com/effortlesslabs/dbx"

[dependencies]
dbx-core = { path = "../dbx-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
url = "2.5"
validator = { version = "0.18", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8" 