[package]
name = "dbx-core"
version = "0.1.6"
edition = "2021"
description = "Core types and traits for DBX universal database API"
license = "MIT"
repository = "https://github.com/effortlesslabs/dbx"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = "0.4" 