[package]
name = "dbx-router"
version = "0.1.6"
edition = "2021"
description = "Backend routing and operation dispatch for DBX"
license = "MIT"
repository = "https://github.com/effortlesslabs/dbx"

[dependencies]
dbx-core = { path = "../dbx-core" }
dbx-config = { path = "../dbx-config" }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
dashmap = "5.5"
regex = "1.10"
glob = "0.3"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12" 