[package]
name = "dbx-redis-api"
version = "0.1.6"
edition = "2021"

[[bin]]
name = "dbx-redis-api"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true, features = ["ws"] }
bcrypt = "0.16.0"
chrono = { workspace = true }
dbx-adapter = { path = "../adapter", features = ["async", "connection-pool"] }
dbx-core = { path = "../dbx-core" }
dbx-config = { path = "../dbx-config" }
dbx-router = { path = "../dbx-router" }
futures = { workspace = true }
jsonwebtoken = "9.3.0"
redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
axum-test = "15.4.0"
reqwest = { workspace = true }
serial_test = "3.0"
tokio-test = "0.4"
