[package]
name = "dbx-redis-client"
version = "0.1.6"
edition = "2021"
authors = ["DBX Team"]
description = "Redis client library for DBX project"
license = "MIT"
repository = "https://github.com/dbx/redis-client"
readme = "README.md"
keywords = ["redis", "api", "sdk", "client"]
categories = ["api-bindings", "database"]

[features]
default = ["http", "websocket", "string", "set"]
http = ["reqwest", "url"]
websocket = ["tokio-tungstenite", "futures-util", "url"]
integration-tests = [] # Feature flag for tests that require a running server
string = []
set = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["net", "rt"] }

# HTTP client dependencies
reqwest = { version = "0.11", features = ["json"], optional = true }
url = { version = "2.0", optional = true }

# WebSocket client dependencies
tokio-tungstenite = { version = "0.21", features = ["native-tls"], optional = true }
futures-util = { version = "0.3", optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-test = "0.4"
rand = "0.8" 